# T1T2ne

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  readthedocs.yaml  rebuild_t1t2ne.sh
docs/: requirements.txt
docs/source/: __init__.rst  base.rst  conf.py  create_registry.rst  docmodules.rst  f_ParaMeters_relax.rst  f_findfs.rst  f_fit.rst  fun_hetrelax_models.rst  hydrodynamics_utils.rst  index.rst  installation.rst  t1t2ne_configure.rst  t1t2ne_interactive.rst  t1t2ne_makelists.rst  t1t2ne_ns.rst  t1t2ne_setuptract.rst  t1t2ne_solventpre.rst  t1t2ne_tract.rst  t1t2ne_utils.rst  t1ttune_configure.rst  textcolor.rst  tract_extra.rst  ug-configure.rst  ug-interactive.rst  ug-makelists.rst  ug-ns.rst  ug-setuptract.rst  ug-solventpre.rst  ug-tract.rst  useguide.rst
docs/source/_static/: custom.css
t1t2ne/: __init__.py  cli.py
t1t2ne/scripts/: create_registry.py  f_ParaMeters_relax.py  f_fit.py  fun_hetrelax_models.py  t1t2ne_configure.py  t1t2ne_interactive.py  t1t2ne_makelists.py  t1t2ne_ns.py  t1t2ne_setuptract.py  t1t2ne_solventpre.py  t1t2ne_tract.py  t1t2ne_utils.py
t1ttune/scripts/: f_fit.py  fun_hetrelax_models.py  t1ttune_configure.py  t1ttune_interactive.py  t1ttune_makelists.py  t1ttune_ns.py  t1ttune_setuptract.py  t1ttune_tract.py  t1ttune_utils.py
